--- a/index.html
+++ b/index.html
@@ -9,53 +9,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<canvas id="canvas" width="100" height="100"></canvas>
-<script>
-    let canvas = document.getElementById('canvas')
-    canvas.width = document.documentElement.clientWidth
-    canvas.height = document.documentElement.clientHeight
-    let ctx = canvas.getContext("2d")
-    ctx.fillStyle = "black"
-    ctx.strokeStyle = 'none'
-    ctx.lineWidth = 10
-    ctx.lineCap = 'round'
-
-    function drawLine(x1, y1, x2, y2) {
-        ctx.beginPath()
-        ctx.moveTo(x1, y1)
-        ctx.lineTo(x2, y2)
-        ctx.stroke()
-    }
-
-    let painting = false
-    let last
-    let isTouchDevice = 'ontouchstart' in document.documentElement;
-    if (isTouchDevice) {
-        canvas.ontouchstart = (e) => {
-            last = [e.touches[0].clientX, e.touches[0].clientY]
-        }
-        canvas.ontouchmove = (e) => {
-            let x = e.touches[0].clientX
-            let y = e.touches[0].clientY
-            drawLine(last[0], last[1], x, y)
-            last = [x, y]
-        }
-    } else {
-        canvas.onmousedown = (e) => {
-            painting = true
-            last = [e.clientX, e.clientY]
-        }
-        canvas.onmouseup = () => {
-            painting = false
-        }
-        canvas.onmousemove = (e) => {
-            if (painting) {
-                drawLine(last[0], last[1], e.clientX, e.clientY)
-                last = [e.clientX, e.clientY]
-            }
-        }
-    }
-</script>
+<div class="selections" id="selections">
+<div class="action">
+    <span id="pen">画画</span>
+    <span id="eraser">橡皮擦</span>
+    <span id="clear">清空</span>
+    <span id="download">下载</span>
 </div>
+<div class="lineWidth">
+    <span id="thinLine">细线</span>
+    <span id="strongLine">粗线</span>
+</div>
+<div class="lineColor">
+    <span id="black">黑色</span>
+    <span id="red">红色</span>
+    <span id="yellow">黄色</span>
+    <span id="blue">蓝色</span>
+</div>
+</div>
+<canvas id="canvas" width="100" height="100">
+
+</canvas>
+
+<script src="main.js"></script>
 </body>
 </html>
+
