完成选中功能

--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
             </svg>
         </div>
     </div>
-    <div class="lineWidth kind">
-        <span class="thinLine kind" id="thinLine"></span>
-        <span class="strongLine kind" id="strongLine"></span>
-    </div>
+    <ul class="lineWidth kind">
+        <li id="thinLine">
+            <span class="thinLine kind" ></span>
+        </li>
+        <li id="strongLine">
+            <span class="strongLine kind" ></span>
+        </li>
+    </ul>
     <div class="lineColor kind">
         <span class="circle black" id="black"></span>
         <span class="circle red" id="red"></span>
